--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^11.0.0",
     "gulp": "^3.9.0",
     "gulp-jade": "^1.0.1",
+    "gulp-stylus": "^2.0.5",
     "js-base64": "^2.1.8",
     "sha1sum": "0.0.1",
     "vinyl-source-stream": "^1.1.0",
